Parsed the getPayroll tax response. #43
